--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=DevWeb
+spring.datasource.url=jdbc:mysql://localhost:3306/my-bank
+spring.datasource.username=root
+spring.datasource.password=my-secret-pw
+
+api.security.token.secret=${JWT_SECRET:12345678}
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+Access-Control-Allow-Origin
+Access-Control-Allow-Headers
